ci(readme): getting untappd beers for readme.

--- a/.github/workflows/untappd.yml
+++ b/.github/workflows/untappd.yml
@@ -6,19 +6,31 @@ on:
 
 jobs:
   get_activities: 
-    runs_on: ubuntu-latest
     name: Get the latest activity feed
+    runs-on: ubuntu-latest
     steps: 
-      - uses: action/checkout@v2
-      - name: Fetch API Data
-        uses: JamesIves/fetch-api-data-action@releases/v1
-        with: 
-          ENDPOINT: https://api.untappd.com/v4/user/checkins/jtucker?CLIENT_ID={{secrets.UNTAPPD_CLIENT_ID}}&client_secret={{secrets.UNTAPPD_CLIENT_SECRET}}
-          CONFIGURATION: { method: 'GET', headers: {'Content-Type': 'application/json'} }
-          SAVE_LOCATION: 'untapped/activity.json'
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install jq
+        run: |
+          curl -Lo jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
+          chmod +x jq
+          sudo mv jq /usr/local/bin
+
+      - name: Get the latest untappd
+        run: |
+          mkdir untappd
+          curl -o untappd/activity.json "https://api.untappd.com/v4/user/checkins/jtucker?client_id=0526F08149CC2399CB31FCDA70520D8002CAB4BF&client_secret=71F2DD8A97DD3D7DFDEBD0311B627DA311CB748D&limit=3"
+          jq '.response.checkins.items | map({ name: .beer.beer_name, style: .beer.beer_style, label: .beer.beer_label, photo: .media.items | .[0] | .photo.photo_img_sm,  brewery: .brewery.brewery_name, rating: .rating_score })' untappd/activity.json > untappd/beers.json
+
       - name: Update README with untappd
         uses: EddieJaoudeCommunity/gh-actions-html-table-generator@v0.1.1
         with:
-          github-token: {{ secrets.GITHUB_TOKEN }}
-          json-file-path: 'untappd/activity.json'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          object-field-names: '["name", "style", "label", "photo", "brewery", "rating"]'
+          html-cell: '<td align="center">
+            Drinking a <strong>{{ name }}</strong> by <strong>{{ brewery }}</strong>. It is a <strong>{{ style }}</strong> style of beer. I rated it a <strong>{{rating}}</strong>
+          </td>'
+          json-file-path: 'untappd/beers.json'
 
