--- a/.github/workflows/untappd.yml
+++ b/.github/workflows/untappd.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
-
+      
+      - run: dotnet new
+      
       - name: Install jq
         run: |
           curl -Lo jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
