--- a/.github/workflows/untappd.yml
+++ b/.github/workflows/untappd.yml
@@ -9,16 +9,20 @@ jobs:
   get_activities: 
     name: Get the latest activity feed
     runs-on: ubuntu-latest
+    env:
+      DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
+      DOTNET_NOLOGO: true
+      DOTNET_CLI_TELEMETRY_OPTOUT: true
     steps: 
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Setup dotnet 5
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
-      
-      - run: dotnet new
       
       - name: Install jq
         run: |
@@ -34,15 +38,11 @@ jobs:
 
       - name: Update readme with checkins
         run: |
-          echo 'updating README.asciidoc... '
           dotnet fsi update-readme.fsx
-          echo 'finished updating README.asciidoc'
-      
-      - name: Commit if updated
-        run: |
-          git diff
-          git config --global user.email "readmeupdater@noreply.github.com"
-          git config --global user.name  "readme-updater"
-          git add -A
-          git commit -m "Updated README with new checkins on date::$(date +'%Y-%m-%d')" || exit 0
-          git push
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Updated README with latest untappd activity $(date +'%Y-%m-%d')
+          commit_user_name: My Untappd Update Bot
+          commit_user_email: my-untappd-activity@noreply.email.com
+          skip_dirty_check: false
