--- a/.github/workflows/untappd.yml
+++ b/.github/workflows/untappd.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup dotnet 5
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.x'
+          dotnet-version: '5.0.203'
       
       - name: Install jq
         run: |
